--- a/app/src/main/res/layout/fragment_business_frg.xml
+++ b/app/src/main/res/layout/fragment_business_frg.xml
@@ -17,8 +17,7 @@
             android:background="@color/colorAccent"
             app:tabIndicatorColor="@color/white"
             app:tabIndicatorHeight="2dp"
-            app:tabMode="scrollable"
-            app:tabGravity="fill"/>
+            app:tabMode="scrollable"/>
     </com.google.android.material.appbar.AppBarLayout>
 
 
