--- a/app/src/main/res/layout/fragment_good__m__n_wishes.xml
+++ b/app/src/main/res/layout/fragment_good__m__n_wishes.xml
@@ -1,15 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".Fragment_general.good_M_N_wishes">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+
+    <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="good wishes"
-        android:gravity="center"/>
+        android:id="@+id/mnrecyclerview"/>
 
-</FrameLayout>
+
+
+
+</LinearLayout>
