--- a/app/src/main/res/layout/fragment_health.xml
+++ b/app/src/main/res/layout/fragment_health.xml
@@ -12,7 +12,7 @@
 <androidx.recyclerview.widget.RecyclerView
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/health_recycler"/>
+    android:id="@+id/hrecyclerview"/>
 
 
 
