--- a/app/src/main/res/layout/image.xml
+++ b/app/src/main/res/layout/image.xml
@@ -5,32 +5,28 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:cardCornerRadius="10dp"
-    app:contentPadding="5dp"
+    app:cardCornerRadius="0dp"
     app:cardUseCompatPadding="true"
-    app:cardElevation="3dp">
+    app:cardElevation="0dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:gravity="center">
-
+        android:orientation="vertical">
     <ImageView
         android:id="@+id/rImageView"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="150dp"
         android:scaleType="centerCrop"
         tools:src="@drawable/ic_launcher_background"
-        android:adjustViewBounds="true"
-        android:padding="2dp"/>
+        android:adjustViewBounds="true" />
     <TextView
         android:textAlignment="center"
         android:id="@+id/rTitleView"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:text="Title"
-        android:paddingLeft="10dp"
+        android:paddingLeft="0dp"
         android:textColor="@color/black"
         android:textSize="16sp"/>
 
