--- a/app/src/main/res/layout/activity_otp_verifition2.xml
+++ b/app/src/main/res/layout/activity_otp_verifition2.xml
@@ -167,8 +167,9 @@
                     android:layout_width="271dp"
                     android:layout_height="58dp"
                     android:ems="10"
-                    android:inputType="textPersonName"
+                    android:inputType="number"
                     android:hint="Enter OTP here"
+
                     android:textSize="20sp">
 
                 </EditText>
