--- a/app/src/main/res/layout/fragment_education.xml
+++ b/app/src/main/res/layout/fragment_education.xml
@@ -4,9 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
+
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/white"
+    android:background="@drawable/bizz_back"
     tools:context=".Fragment_business.Education">
 
 
