--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,5 +18,9 @@
 
     <color name="color_view">#A5A2A2</color>
 
+    <color name="gray">#888</color>
+    <color name="blue">#0000FF</color>
+
+
 
 </resources>
